export default class Grid {
    constructor(
        public readonly width: number,
        public readonly height: number,
        public readonly cellSize: number = 50
    ) {}
}
